kube/observation/victorialogs/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: victorialogs-syslog
  namespace: obs
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.228"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/instance: victorialogs
  ports:
  - name: syslog-udp
    port: 5140
    targetPort: 5140
    protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs
  namespace: obs
  labels:
    app.kubernetes.io/name: victorialogs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - victorialogs.matthew-stratton.me
    secretName: victorialogs-tls
  rules:
  - host: victorialogs.matthew-stratton.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: victorialogs
            port:
              number: 9428
